<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GWeather</string>
    <string name="refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="okay">Okay</string>
    <string name="fix">Fix</string>
    <string name="retry">Retry</string>
    <string name="location_services">Location services </string>
    <string name="gps_location">GPS location</string>
    <string name="network_location">Network location</string>
    <string name="is_not_enabled"> is not enabled</string>
    <string name="error_determine_location">Could not determine location</string>
    <string name="error_internet">Please check your internet connection</string>
    <string name="error_zipcode">Invalid zipcode</string>

    <string name="please_wait">Please Wait...</string>
    <string name="loading_forecast">Loading Your Weather Forecast!</string>

    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="humidity">Humidity</string>
    <string name="rain">Rain</string>
    <string name="avgwind">Avg. Wind</string>
    <string name="maxwind">Max Wind</string>
    <string name="winddir">Direction</string>
    <string name="snow">Snow</string>

    <string name="fahrenheit_symbol">&#176;F</string>
    <string name="celsius_symbol">&#176;C</string>

    <string name="placeholder_city">Washington, D.C.</string>
    <string name="placeholder_day">Saturday</string>
    <string name="placeholder_weather">Partly Cloudy</string>
    <string name="placeholder_lowhigh">67 &#176;F / 80 &#176;F</string>
    <string name="placeholder_current">75 F</string>

    <string name="placeholder_fullDesc">Considerable cloudiness with occasional rain showers. High near 50F. Winds NW at 10 to 15 mph. Chance of rain 40%.</string>
    <string name="placeholder_humidity">54%</string>
    <string name="placeholder_wind">15 mph</string>
    <string name="placeholder_wind_dir">WNW</string>

    <string name="key_location_category">key_location_category</string>
    <string name="key_misc_category">key_misc_category</string>
    <string name="key_location_mode">key_location_hardware</string>
    <string name="key_zipcode_use">key_zipcode_use</string>
    <string name="key_zipcode_set">key_zipcode_set</string>
    <string name="key_metric">key_metric</string>
    <string name="key_forecast_size">key_forecast_size</string>

    <string name="pref_location">Location</string>
    <string name="pref_misc">Miscellaneous</string>
    <string name="pref_location_mode">Mode</string>
    <string name="pref_location_desc">Adjust location access modes and zipcode override</string>
    <string name="pref_metric">Temperature Metric</string>
    <string name="pref_zipcode_use">Use Zipcode</string>
    <string name="pref_zipcode_use_desc">Use specified zipcode instead of location hardware</string>
    <string name="pref_zipcode_set">Set Zipcode</string>
    <string name="pref_forecast_size">Forecast Size</string>
    <string name="pref_forecast_summary_suffix">-day forecast</string>

    <string name="pref_location_list_default">0</string>
    <string name="pref_metrics_list_default">0</string>

    <string-array name="pref_location_list">
        <item>GPS Only</item>
        <item>Network Only</item>
        <item>GPS and Network</item>
    </string-array>

    <string-array name="pref_metrics_list">
        <item>Fahrenheit (&#176;F)</item>
        <item>Celsius (&#176;C)</item>
    </string-array>

    <string-array name="pref_location_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_metrics_values">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
